test/files/valid/subdir/include3.fbs
include "../include4.fbs";
