test/files/invalid/defined_twice_namespace.fbs
include "helpers/overlapping_namespace1.fbs";
include "helpers/overlapping_namespace2.fbs";

table Foo {}
